--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -39,6 +39,7 @@
         <ul class="nav" id="main-menu-left">
           <li><a href="/admin/users">Users</a></li>
           <li><a id="" href="/admin/sales">Sales</a></li>
+          <li><a id="" href="/admin/sale_groups">Groups</a></li>          
           <li><a id="" href="/admin/purchases">Purchases</a></li>
           <li><a id="" href="/admin/pages">Pages</a></li>
         </ul>
