--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -12,7 +12,6 @@
 	
     <%= javascript_include_tag 'application' %>    
     <%= stylesheet_link_tag 'application' %>
-    
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -78,6 +77,8 @@
 	      </div>
 	    </div>
 	  </div>
+
+    <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
 
   </body>
 </html>
