--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,7 +42,19 @@ body {
     <br>
 
     <div style="min-height:180px;">
-      <blockquote><%= @show_user.bio %></blockquote><br><br>
+      <blockquote><%= @show_user.bio %>
+        
+        <br><br>
+        <% if @show_user.id != @user.id %>
+
+        <%= link_to("Unfollow", follower_path(:id => (@show_user.is_followed || "blah")), :remote => true, :method => :delete, :class => "btn-large btn-success btn profile-name span2", :id=> "unfollow", :style => ("display:none;" unless @show_user.is_followed)) %>
+
+        <%= link_to("Follow", followers_path(:following_id => @show_user.id), :remote => true, :method => :post, :class => "btn-large btn-success btn profile-name span2", :id=> "follow", :style => ("display:none;" if @show_user.is_followed)) %>
+
+        <% end %>
+
+      </blockquote>
+
     </div>
 
     <style>
@@ -73,15 +85,7 @@ jQuery(function($) {
 
     </script>
 
-    <% if @show_user.id != @user.id %>
-
-    <%= link_to("Unfollow", follower_path(:id => (@show_user.is_followed || "blah")), :remote => true, :method => :delete, :class => "btn-large btn-success btn profile-name span2", :id=> "unfollow", :style => ("display:none;" unless @show_user.is_followed)) %>
-
-    <%= link_to("Follow", followers_path(:following_id => @show_user.id), :remote => true, :method => :post, :class => "btn-large btn-success btn profile-name span2", :id=> "follow", :style => ("display:none;" if @show_user.is_followed)) %>
-
-  <% end %>
-
-    <br>
+    
 
   </div>
 </div>
