--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -153,6 +153,7 @@ body {
   line-height: 20px;
   color: #333333;
   background-color: #FFFFFF;
+  
   background-image: url('/assets/frenchstucco.png');
   
 }
@@ -6023,5 +6024,4 @@ button.close {
     height: auto !important;
     overflow: visible !important;
   }
-}
-*/
+}*/
