--- a/app/views/sale_groups/landing.html.erb
+++ b/app/views/sale_groups/landing.html.erb
@@ -1,7 +1,7 @@
 <style>
-  body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-  }
+body {
+  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
 </style>
 
 
@@ -9,6 +9,9 @@
   <div class="marketing-template">
 
     <%= raw @page.content %>
+
+    <br>
+    <br>
 
     <hr class="featurette-divider">
 
@@ -20,24 +23,33 @@
           <% @groups.each do |group| %>
             <% next unless sale = group.featured_sale %>
           <li class="span3">
-        
+
           <p class="hayes-phrase">From <%= group.name %></p>
 
-            <%= link_to(image_tag(sale.image_0.versions[:web_index],
-                        :class => "product-pic img-polaroid"),
-                        group_slug_url(:slug => group.slug)) if sale.image_0 %>
+          <%= link_to(image_tag(sale.image_0.versions[:web_index],
+                                :class => "product-pic img-polaroid"),
+                                group_slug_url(:slug => group.slug)) if sale.image_0 %>
 
-          </li>
+      </li>
 
-          <% end %>
+      <% end %>
 
-        </ul>
-      </div>
+      </ul>
+    </div>
 
   </div>
 </div>
 
-<div class="container">
-  <hr class="featurette-divider">
-</div><!-- /.container -->
+<div class="asfeatured">
+  <p>JOIN US</p>
+
+</div>
+
+<table class="press-pass">  
+  <td><a href="http://www.pinterst.com/mysaletable"><%= image_tag("pinterestlogo.png") %></a></td>
+  <td><a href="http://www.twitter.com/mysaletable"><%= image_tag("tbird.png") %></a></td>
+  <td><a href="http://www.facebook.com/mysaletable"><%= image_tag("fb_logo.png") %></a></td>
+  <td><a href="http://www.instagram.com/mysaletable"><%= image_tag("instagram.png") %></a></td>
+
+</table>
 
