--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
 
           <center>
-            <a class="brand" href="/">
+            <a class="brand" href="/sales">
               <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
             </a>
           </center>
