--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -49,7 +49,7 @@
             <span class="icon-bar"></span>
           </a>
           <center>
-          <a class="brand" href="/">
+          <a class="brand" href="/sales">
             <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
           </a>
         </center>
