special stores-sales view

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -56,6 +56,15 @@ Joined <%= @user.created_at.strftime("%b %d, %Y") %>.
 </div>
 
 <div class="control-group">
+<label class="control-label" for="optionsCheckbox">Featured</label>
+<div class="controls">
+<%= check_box(:user, :featured) %>
+</div>
+</div>
+
+
+
+<div class="control-group">
 <label class="control-label">Business name</label>
 <div class="controls">
 <%= text_field(:user, :business_name, :class => "input-xlarge") %>
