--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
+  .signup-unit { min-height: 330px; }
+
 </style>
 
 
@@ -21,7 +23,7 @@ body {
   <div class="container">
   <div class="signup-unit">
     <span class="span4 pull-left">
-      <img height="225" width="225" class="img-polaroid" src="<%= @show_user.photo_version_url(:profile_2x) %>" ><br>
+      <img class="img-polaroid" src="<%= @show_user.photo_version_url(:profile_2x) %>" ><br>
 
       <a href="<%= users_following_me_url(:user_id => @show_user.id) %>"class="btn btn-success span2 followers-button"><%= @show_user.follower_count %> Followers</a><br>
       <a href="<%= users_im_following_url(:user_id => @show_user.id) %>"class="btn btn-success span2 following-button"><%= @show_user.following_count %> Following</a>
@@ -83,8 +85,6 @@ jQuery(function($) {
 });
 
     </script>
-
-    
 
   </div>
 </div>
