redo stores, add display order

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -62,12 +62,18 @@ Joined <%= @user.created_at.strftime("%b %d, %Y") %>.
 </div>
 </div>
 
-
+<div class="control-group">
+<label class="control-label">Display order</label>
+<div class="controls">
+  <%= text_field(:user, :display_order, :class => "input-small") %>
+  Higher numbers are displayed first.  
+</div>
+</div>
 
 <div class="control-group">
 <label class="control-label">Business name</label>
 <div class="controls">
-<%= text_field(:user, :business_name, :class => "input-xlarge") %>
+  <%= text_field(:user, :business_name, :class => "input-xlarge") %>
 </div>
 </div>
 
