--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -18,6 +18,9 @@ body {
     <h1>Edit Sale</h1>
   </div>
 
+  <button class="pull-right btn btn-success view-sales" onclick="window.location='<%= user_custom_slug_url(@user) %>'">View Sales</button>
+<button class="pull-right btn btn-success" onclick="window.location='<%= sold_purchases_url %>'">View Orders</button>
+  
 
   <h3>
     Posted by 
