--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,6 +26,8 @@ body {
 			<div class="signup-unit">
         <span class="order-status">
           <a href="<%= purchases_url %>"><u>Order Status</u></a>
+          <a href="<%= user_custom_slug_url(@user) %>"><u>View Sales</u></a>
+
 				</span>
 
 
