--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -18,7 +18,7 @@
       <% end %>
 
       <% if sale.sold_out %>
-        <a href="#" onclick="return false;" class="btn btn-success span4 pull-right disabled">Sold Out</a>
+        <a href="#" onclick="return false;" class="btn btn-success span4 pull-right disabled">SOLD</a>
       <% else %>
         <% if sale.user and sale.user.is_merchant %>
           <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
