--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -46,9 +46,7 @@ nav,
 section {
   display: block;
 }
-#footer {
-    background-color: #F5F5F5;
-}
+
 audio,
 canvas,
 video {
@@ -152,9 +150,8 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #FFFFFF;
-  
-  background-image: url('/assets/frenchstucco.png');
+
+  background-color: #f9f9f9;
   
 }
 a {
